# six7

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml  six7.yaml
.github/workflows/: docker-publish.yml
docs/: api-reference.md  configuration.md  docker.md  examples.md  getting-started.md
example/: package.json
example/src/: App.tsx  filelist.tsx  s3client.ts  upload.tsx
src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  storage.rs
tests/: auth_test.rs  config_test.rs  integration_test.rs  storage_test.rs
