[package]
name = "six7"
version = "0.0.1"
edition = "2021"

[lib]
name = "six7"
path = "src/lib.rs"

[[bin]]
name = "six7"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
bytes = "1.9"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
md5 = "0.7"

[dev-dependencies]
tempfile = "3.13"
tower = "0.5"
hyper = "1.5"
